[gd_scene load_steps=18 format=2]

[ext_resource path="res://src/objects/counter.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/objects/portal.tscn" type="PackedScene" id=2]
[ext_resource path="res://NEAT_usability/fonts/dynamics/roboto-regular.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/images/background.png" type="Texture" id=4]
[ext_resource path="res://joystick/virtual_joystick.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/actors/enemy.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/tiles/maintileset.tres" type="TileSet" id=7]
[ext_resource path="res://src/TRlevels/lvpaths/lv6path.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/levels/basic_lv_script.gd" type="Script" id=9]
[ext_resource path="res://assets/tiles/lavatiles.tres" type="TileSet" id=11]
[ext_resource path="res://assets/tiles/slowspeed.tres" type="TileSet" id=12]
[ext_resource path="res://assets/tiles/speedtile.tres" type="TileSet" id=13]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 0, 0, 0, 1, 0.180556, 0.180556, 0.180556, 1 )

[sub_resource type="GradientTexture2D" id=4]
gradient = SubResource( 3 )
fill = 1
fill_from = Vector2( 1, 0 )
fill_to = Vector2( 0, 0 )

[sub_resource type="RectangleShape2D" id=5]

[node name="testlv" type="Node2D"]
script = ExtResource( 9 )

[node name="background2" type="CanvasLayer" parent="."]
layer = -100

[node name="Background" type="TextureRect" parent="background2"]
modulate = Color( 0.780392, 0.545098, 0.545098, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )

[node name="counter" parent="background2" instance=ExtResource( 1 )]

[node name="MENUB" type="TouchScreenButton" parent="background2"]
position = Vector2( 91.5703, 42.4264 )
scale = Vector2( 2.4, 1.04 )
shape = SubResource( 1 )

[node name="Label" type="Label" parent="background2/MENUB"]
margin_left = -0.294622
margin_top = -1.14441e-05
margin_right = 39.7054
margin_bottom = 19.0
rect_scale = Vector2( 0.516666, 1 )
custom_fonts/font = ExtResource( 3 )
text = "menu"

[node name="RestartB" type="TouchScreenButton" parent="background2"]
position = Vector2( 162.281, 42.0729 )
scale = Vector2( 2.12, 1 )
shape = SubResource( 2 )

[node name="Label2" type="Label" parent="background2/RestartB"]
margin_left = -0.333534
margin_top = 1.41422
margin_right = 39.6665
margin_bottom = 20.4142
rect_scale = Vector2( 0.516666, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Restart"

[node name="enemy" parent="." instance=ExtResource( 6 )]
position = Vector2( 1639.18, 710.135 )

[node name="enemy3" parent="." instance=ExtResource( 6 )]
position = Vector2( 2258, 1341 )

[node name="enemy4" parent="." instance=ExtResource( 6 )]
position = Vector2( 2749, 1349 )

[node name="enemy5" parent="." instance=ExtResource( 6 )]
position = Vector2( 3164, 1345 )

[node name="enemy2" parent="." instance=ExtResource( 6 )]
position = Vector2( 1153, 716 )

[node name="maintile" type="TileMap" parent="."]
position = Vector2( 1, 0 )
tile_set = ExtResource( 7 )
collision_layer = 8
collision_mask = 0
format = 1
tile_data = PoolIntArray( -262148, -1610612729, 0, -262147, -1610612729, 0, -262146, -1610612729, 0, -262145, -1610612729, 0, -327680, -1610612729, 0, -327679, -1610612729, 0, -327678, -1610612729, 0, -327677, -1610612729, 0, -327676, -1610612729, 0, -327675, -1610612729, 0, -327674, -1610612729, 0, -327673, -1610612729, 0, -327672, -1610612729, 0, -327671, -1610612729, 0, -327670, -1610612729, 0, -327669, -1610612729, 0, -327668, -1610612729, 0, -327667, -1610612729, 0, -327666, -1610612729, 0, -327665, -1610612729, 0, -327664, -1610612729, 0, -327663, -1610612729, 0, -327662, -1610612729, 0, -327661, -1610612729, 0, -327660, -1610612729, 0, -327659, -1610612729, 0, -327658, -1610612729, 0, -327657, -1610612729, 0, -327656, -1610612729, 0, -327655, -1610612729, 0, -327654, -1610612729, 0, -327653, -1610612729, 0, -327652, -1610612729, 0, -327651, -1610612729, 0, -327650, -1610612729, 0, -327649, -1610612729, 0, -327648, -1610612729, 0, -327647, -1610612729, 0, -327646, -1610612729, 0, -327645, -1610612729, 0, -327644, -1610612729, 0, -327643, -1610612729, 0, -327642, -1610612729, 0, -327641, -1610612729, 0, -327640, -1610612729, 0, -327639, -1610612729, 0, -327638, -1610612729, 0, -327637, -1610612729, 0, -327636, -1610612729, 0, -327635, -1610612729, 0, -327634, -1610612729, 0, -327633, -1610612729, 0, -327632, -1610612729, 0, -327631, -1610612729, 0, -327630, -1610612729, 0, -327629, -1610612729, 0, -327628, -1610612729, 0, -327627, -1610612729, 0, -327626, -1610612729, 0, -327625, -1610612729, 0, -327624, -1610612729, 0, -327623, -1610612729, 0, -327622, -1610612729, 0, -327621, -1610612729, 0, -327620, -1610612729, 0, -327619, -1610612729, 0, -327618, -1610612729, 0, -327617, -1610612729, 0, -327616, -1610612729, 0, -327615, -1610612729, 0, -327614, -1610612729, 0, -327613, -1610612729, 0, -327612, -1610612729, 0, -327611, -1610612729, 0, -327610, -1610612729, 0, -327609, -1610612729, 0, -327608, -1610612729, 0, -327607, -1610612729, 0, -327606, -1610612729, 0, -327605, -1610612729, 0, -327604, -1610612729, 0, -327603, -1610612729, 0, -327602, -1610612729, 0, -327601, -1610612729, 0, -327600, -1610612729, 0, -327599, -1610612729, 0, -327598, -1610612729, 0, -327597, -1610612729, 0, -327596, -1610612729, 0, -327595, -1610612729, 0, -327594, -1610612729, 0, -327593, -1610612729, 0, -327592, -1610612729, 0, -327591, -1610612729, 0, -327590, -1610612729, 0, -327589, -1610612729, 0, -327588, -1610612729, 0, -327587, -1610612729, 0, -327586, -1610612729, 0, -327585, -1610612729, 0, -327584, -1610612729, 0, -327583, -1610612729, 0, -327582, -1610612729, 0, -327581, -1610612729, 0, -327580, -1610612729, 0, -327579, -1610612729, 0, -327578, -1610612729, 0, -327577, -1610612729, 0, -327576, -1610612729, 0, -327575, -1610612729, 0, -327574, -1610612729, 0, -327573, -1610612729, 0, -327572, -1610612729, 0, -327571, -1610612729, 0, -327570, -1610612729, 0, -327569, -1610612729, 0, -327568, -1610612729, 0, -327567, -1610612729, 0, -327566, -1610612729, 0, -327565, -1610612729, 0, -327564, -1610612729, 0, -327563, -1610612729, 0, -327562, -1610612729, 0, -327561, -1610612729, 0, -327560, -1610612729, 0, -327559, -1610612729, 0, -327558, -1610612729, 0, -327557, -1610612729, 0, -327556, -1610612729, 0, -327555, -1610612729, 0, -327554, -1610612729, 0, -327553, -1610612729, 0, -327552, -1073741824, 0, -327551, -1073741824, 0, -327550, -1073741824, 0, -327549, -1073741824, 0, -327548, -1073741824, 0, -327547, -1073741824, 0, -327546, -1073741824, 0, -327545, -1073741824, 0, -327544, -1073741824, 0, -327543, -1073741824, 0, -327542, -1073741824, 0, -327541, -1073741824, 0, -327540, -1073741824, 0, -327539, -1073741824, 0, -327538, -1073741824, 0, -327537, -1073741824, 0, -327536, -1073741824, 0, -327535, -1073741824, 0, -327534, -1073741824, 0, -327533, -1073741824, 0, -327532, -1073741824, 0, -327531, -1073741824, 0, -327530, -1073741824, 0, -327529, -1073741824, 0, -327528, -1073741824, 0, -327527, -1073741824, 0, -327526, -1073741824, 0, -327525, -1073741824, 0, -327524, -1610612729, 0, -327523, -1610612729, 0, -327522, -1610612729, 0, -327521, -1610612729, 0, -327520, -1610612729, 0, -327519, -1610612729, 0, -327518, -1610612729, 0, -327517, -1610612729, 0, -327516, -1610612729, 0, -327515, -1610612729, 0, -327514, -1610612729, 0, -327513, -1610612729, 0, -327512, -1610612729, 0, -327511, -1610612729, 0, -327510, -1610612729, 0, -327509, -1610612729, 0, -327508, -1610612729, 0, -327507, -1610612729, 0, -327506, -1610612729, 0, -327505, -1610612729, 0, -327504, -1610612729, 0, -327503, -1610612729, 0, -327502, -1610612729, 0, -327501, -1610612729, 0, -327500, -1610612729, 0, -327499, -1610612729, 0, -327498, -1610612729, 0, -327497, -1610612729, 0, -327496, -1610612729, 0, -327495, -1610612729, 0, -327494, -1610612729, 0, -327493, -1610612729, 0, -327492, -1610612729, 0, -327491, -1610612729, 0, -327490, -1610612729, 0, -327489, -1610612729, 0, -327488, -1610612729, 0, -327487, -1610612729, 0, -327486, -1610612729, 0, -327485, -1610612729, 0, -327484, -1610612729, 0, -327483, -1610612729, 0, -327482, -1610612729, 0, -327481, -1610612729, 0, -327480, -1610612729, 0, -327479, -1610612729, 0, -327478, -1610612729, 0, -327477, 7, 0, -196612, -1610612729, 0, -261941, 7, 0, -131076, -1610612729, 0, -196405, 7, 0, -65540, -1610612729, 0, -130869, 7, 0, -4, -1610612729, 0, -65333, 7, 0, 65532, 7, 0, 203, 7, 0, 131068, 7, 0, 65739, 7, 0, 196604, 7, 0, 131275, 6, 0, 262140, 7, 0, 196810, 6, 0, 196811, 1610612742, 0, 327676, 7, 0, 262345, 6, 0, 262346, 1610612742, 0, 393212, 7, 0, 327766, 6, 0, 327767, -1610612730, 0, 327880, 6, 0, 327881, 1610612742, 0, 458748, 7, 0, 393301, 6, 0, 393302, 1610612742, 0, 393303, -1073741818, 0, 393304, -1610612730, 0, 393415, 6, 0, 393416, 1610612742, 0, 524284, 7, 0, 458836, 6, 0, 458837, 1610612742, 0, 458840, -1073741818, 0, 458841, -1610612730, 0, 458950, 6, 0, 458951, 1610612742, 0, 589820, 7, 0, 524377, -1073741818, 0, 524378, -1610612730, 0, 524485, 6, 0, 524486, 1610612742, 0, 655356, 7, 0, 589858, 6, 0, 589914, -1073741818, 0, 589915, -1610612730, 0, 589946, 6, 0, 589987, 6, 0, 590020, 6, 0, 590021, 1610612742, 0, 720892, 7, 0, 655393, 6, 0, 655394, 1610612742, 0, 655424, 1610612736, 0, 655425, 1610612736, 0, 655426, 1610612736, 0, 655427, 1610612736, 0, 655428, 1610612736, 0, 655429, 1610612736, 0, 655430, 1610612736, 0, 655431, 1610612736, 0, 655432, -1610612729, 0, 655433, -1610612729, 0, 655434, -1610612729, 0, 655435, -1610612729, 0, 655436, -1610612729, 0, 655437, -1610612729, 0, 655438, -1610612729, 0, 655439, -1610612729, 0, 655440, -1610612729, 0, 655441, -1610612730, 0, 655451, -1073741818, 0, 655452, -1610612730, 0, 655481, 6, 0, 655482, 1610612742, 0, 655522, 6, 0, 655523, 1610612742, 0, 655555, 6, 0, 655556, 1610612742, 0, 786428, 7, 0, 720928, 6, 0, 720929, 1610612742, 0, 720959, 6, 0, 720960, -1610612736, 0, 720961, 1610612742, 0, 720966, -1073741818, 0, 720967, 1610612736, 0, 720976, 6, 0, 720977, 1610612742, 0, 720988, -1073741818, 0, 720989, -1610612730, 0, 721016, 6, 0, 721017, 1610612742, 0, 721057, 6, 0, 721058, 1610612742, 0, 721090, 6, 0, 721091, 1610612742, 0, 851964, 7, 0, 851965, -1610612736, 0, 851966, -1610612736, 0, 851967, -1610612736, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 0, 0, 786454, 0, 0, 786455, 0, 0, 786456, 0, 0, 786457, 0, 0, 786458, 0, 0, 786459, 0, 0, 786460, 0, 0, 786461, 0, 0, 786462, 0, 0, 786463, 0, 0, 786464, -1610612729, 0, 786494, 6, 0, 786495, 1610612742, 0, 786496, -1610612736, 0, 786503, -1610612729, 0, 786511, 6, 0, 786512, 1610612742, 0, 786525, -1073741818, 0, 786526, -1610612730, 0, 786551, 6, 0, 786552, 1610612742, 0, 786592, 6, 0, 786593, 1610612742, 0, 786625, 6, 0, 786626, 1610612742, 0, 917500, 7, 0, 917501, 7, 0, 917502, 7, 0, 917503, 7, 0, 851968, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, -1610612736, 0, 851984, -1610612736, 0, 851985, -1610612736, 0, 851986, -1610612736, 0, 851987, 0, 0, 851988, 0, 0, 851989, 0, 0, 851990, 0, 0, 851991, 0, 0, 851992, 0, 0, 851993, 0, 0, 851994, 0, 0, 851995, 0, 0, 851996, 0, 0, 851997, 0, 0, 851998, 0, 0, 851999, 0, 0, 852000, -1610612729, 0, 852029, 6, 0, 852030, 1610612742, 0, 852032, -1610612736, 0, 852039, -1610612729, 0, 852046, 6, 0, 852047, 1610612742, 0, 852062, -1073741818, 0, 852063, -1610612730, 0, 852086, 6, 0, 852087, 1610612742, 0, 852127, 6, 0, 852128, 1610612742, 0, 852160, 6, 0, 852161, 1610612742, 0, 917536, -1610612729, 0, 917564, 6, 0, 917565, 1610612742, 0, 917568, -1610612736, 0, 917575, 7, 0, 917582, -1073741818, 0, 917583, -1610612730, 0, 917598, 6, 0, 917599, 1610612742, 0, 917621, 6, 0, 917622, 1610612742, 0, 917662, 6, 0, 917663, 1610612742, 0, 917695, 6, 0, 917696, 1610612742, 0, 983072, -1610612729, 0, 983099, 6, 0, 983100, 1610612742, 0, 983104, -1610612736, 0, 983105, -1610612730, 0, 983110, 6, 0, 983111, 7, 0, 983119, -1073741818, 0, 983120, -1610612730, 0, 983133, 6, 0, 983134, 1610612742, 0, 983156, 6, 0, 983157, 1610612742, 0, 983197, 6, 0, 983198, 1610612742, 0, 983230, 6, 0, 983231, 1610612742, 0, 1048608, -1610612729, 0, 1048634, 6, 0, 1048635, 1610612742, 0, 1048640, -1610612736, 0, 1048641, 1610612742, 0, 1048656, -1073741818, 0, 1048657, -1610612730, 0, 1048668, 6, 0, 1048669, 1610612742, 0, 1048691, 6, 0, 1048692, 1610612742, 0, 1048732, 6, 0, 1048733, 1610612742, 0, 1048765, 6, 0, 1048766, 1610612742, 0, 1114144, -1610612729, 0, 1114169, 6, 0, 1114170, 1610612742, 0, 1114176, -1610612736, 0, 1114193, -1073741818, 0, 1114194, -1610612730, 0, 1114203, 6, 0, 1114204, 1610612742, 0, 1114226, 6, 0, 1114227, 1610612742, 0, 1114267, 6, 0, 1114268, 1610612742, 0, 1114300, 6, 0, 1114301, 1610612742, 0, 1179680, -1610612729, 0, 1179704, 6, 0, 1179705, 1610612742, 0, 1179712, -1610612736, 0, 1179730, -1073741818, 0, 1179731, -1610612730, 0, 1179738, 6, 0, 1179739, 1610612742, 0, 1179761, 6, 0, 1179762, 1610612742, 0, 1179802, 6, 0, 1179803, 1610612742, 0, 1179835, 6, 0, 1179836, 1610612742, 0, 1245216, -1610612729, 0, 1245239, 6, 0, 1245240, 1610612742, 0, 1245248, -1610612736, 0, 1245267, -1073741818, 0, 1245268, -1610612730, 0, 1245273, 6, 0, 1245274, 1610612742, 0, 1245296, 6, 0, 1245297, 1610612742, 0, 1245337, 6, 0, 1245338, 1610612742, 0, 1245370, 6, 0, 1245371, 1610612742, 0, 1310752, -1610612729, 0, 1310774, 6, 0, 1310775, 1610612742, 0, 1310784, -1610612736, 0, 1310808, 6, 0, 1310809, 1610612742, 0, 1310905, 6, 0, 1310906, 1610612742, 0, 1376288, -1610612729, 0, 1376309, 6, 0, 1376310, 1610612742, 0, 1376320, -1610612729, 0, 1376321, -1610612730, 0, 1376343, 6, 0, 1376344, 1610612742, 0, 1376440, 6, 0, 1376441, 1610612742, 0, 1441824, -1610612729, 0, 1441825, -1610612729, 0, 1441826, -1610612729, 0, 1441827, -1610612729, 0, 1441828, -1610612729, 0, 1441829, -1610612729, 0, 1441830, -1610612729, 0, 1441831, -1610612729, 0, 1441832, -1610612729, 0, 1441833, -1610612729, 0, 1441834, -1610612729, 0, 1441835, -1610612729, 0, 1441836, -1610612729, 0, 1441837, -1610612729, 0, 1441838, -1610612729, 0, 1441839, -1610612729, 0, 1441840, -1610612729, 0, 1441841, -1610612729, 0, 1441842, -1610612729, 0, 1441843, -1610612729, 0, 1441844, -1610612729, 0, 1441845, 1610612743, 0, 1441846, -1610612729, 0, 1441847, -1610612729, 0, 1441848, -1610612729, 0, 1441849, -1610612729, 0, 1441850, -1610612729, 0, 1441851, -1610612729, 0, 1441852, -1610612729, 0, 1441853, -1610612729, 0, 1441854, -1610612729, 0, 1441855, -1610612729, 0, 1441856, -1610612729, 0, 1441857, -1610612729, 0, 1441858, -1610612729, 0, 1441859, -1610612729, 0, 1441860, -1610612729, 0, 1441861, -1610612729, 0, 1441862, -1610612729, 0, 1441863, -1610612729, 0, 1441864, -1610612729, 0, 1441865, -1610612729, 0, 1441866, -1610612729, 0, 1441867, -1610612729, 0, 1441868, -1610612729, 0, 1441869, -1610612729, 0, 1441870, -1610612729, 0, 1441871, -1610612729, 0, 1441872, -1610612729, 0, 1441873, -1610612729, 0, 1441874, -1610612729, 0, 1441875, -1610612729, 0, 1441876, -1610612729, 0, 1441877, -1610612729, 0, 1441878, -1610612729, 0, 1441879, -1610612729, 0, 1441880, -1610612729, 0, 1441881, -1610612729, 0, 1441882, -1610612729, 0, 1441883, -1610612729, 0, 1441884, -1610612729, 0, 1441885, -1610612729, 0, 1441886, -1610612729, 0, 1441887, -1610612729, 0, 1441888, -1610612729, 0, 1441889, -1610612729, 0, 1441890, -1610612729, 0, 1441891, -1610612729, 0, 1441892, -1610612729, 0, 1441893, -1610612729, 0, 1441894, -1610612729, 0, 1441895, -1610612729, 0, 1441896, -1610612729, 0, 1441897, -1610612729, 0, 1441898, -1610612729, 0, 1441899, -1610612729, 0, 1441900, -1610612729, 0, 1441901, -1610612729, 0, 1441902, -1610612729, 0, 1441903, -1610612729, 0, 1441904, -1610612729, 0, 1441905, -1610612729, 0, 1441906, -1610612729, 0, 1441907, -1610612729, 0, 1441908, -1610612729, 0, 1441909, -1610612729, 0, 1441910, -1610612729, 0, 1441911, -1610612729, 0, 1441912, -1610612729, 0, 1441913, -1610612729, 0, 1441914, -1610612729, 0, 1441915, -1610612729, 0, 1441916, -1610612729, 0, 1441917, -1610612729, 0, 1441918, -1610612729, 0, 1441919, -1610612729, 0, 1441920, -1610612729, 0, 1441921, -1610612729, 0, 1441922, -1610612729, 0, 1441923, -1610612729, 0, 1441924, -1610612729, 0, 1441925, -1610612729, 0, 1441926, -1610612729, 0, 1441927, -1610612729, 0, 1441928, -1610612729, 0, 1441929, -1610612729, 0, 1441930, -1610612729, 0, 1441931, -1610612729, 0, 1441932, -1610612729, 0, 1441933, -1610612729, 0, 1441934, -1610612729, 0, 1441935, -1610612729, 0, 1441936, -1610612729, 0, 1441937, -1610612729, 0, 1441938, -1610612729, 0, 1441939, -1610612729, 0, 1441940, -1610612729, 0, 1441941, -1610612729, 0, 1441942, -1610612729, 0, 1441943, -1610612729, 0, 1441944, -1610612729, 0, 1441945, -1610612729, 0, 1441946, -1610612729, 0, 1441947, -1610612729, 0, 1441948, -1610612729, 0, 1441949, -1610612729, 0, 1441950, -1610612729, 0, 1441951, -1610612729, 0, 1441952, -1610612729, 0, 1441953, -1610612729, 0, 1441954, -1610612729, 0, 1441955, -1610612729, 0, 1441956, -1610612729, 0, 1441957, -1610612729, 0, 1441958, -1610612729, 0, 1441959, -1610612729, 0, 1441960, -1610612729, 0, 1441961, -1610612729, 0, 1441962, -1610612729, 0, 1441963, -1610612729, 0, 1441964, -1610612729, 0, 1441965, -1610612729, 0, 1441966, -1610612729, 0, 1441967, -1610612729, 0, 1441968, -1610612729, 0, 1441969, -1610612729, 0, 1441970, -1610612729, 0, 1441971, -1610612729, 0, 1441972, -1610612729, 0, 1441973, -1610612729, 0, 1441974, -1610612729, 0, 1441975, -1610612729, 0, 1441976, 1610612742, 0 )

[node name="Start" type="Position2D" parent="."]
position = Vector2( 223, 635 )

[node name="PlayerStart" type="Position2D" parent="."]
position = Vector2( 162, 662 )

[node name="lavatile" type="TileMap" parent="."]
tile_set = ExtResource( 11 )
format = 1

[node name="speedtile" type="TileMap" parent="."]
tile_set = ExtResource( 13 )
format = 1

[node name="slowtile" type="TileMap" parent="."]
tile_set = ExtResource( 12 )
format = 1

[node name="portal" parent="." instance=ExtResource( 2 )]
position = Vector2( 12972, 268 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="Virtual joystick" parent="UI" instance=ExtResource( 5 )]
anchor_left = 1.0
anchor_right = 1.069
margin_left = -225.636
margin_top = -209.35
margin_right = -84.2922
margin_bottom = -9.34961
rect_scale = Vector2( 1.2743, 1.26329 )
deadzone_size = 11.0
joystick_mode = 1
visibility_mode = 1
action_left = "move_left"
action_right = "move_right"
action_up = "jump"

[node name="Virtual joystick2" parent="UI" instance=ExtResource( 5 )]
margin_left = 84.1322
margin_top = -196.825
margin_right = 284.132
margin_bottom = 3.1748
rect_scale = Vector2( 1.24, 1.11949 )
joystick_mode = 1
visibility_mode = 1
action_left = "move_left"
action_right = "move_right"
action_up = "jump"

[node name="zeroG" type="Area2D" parent="."]
position = Vector2( 3173, 364 )
scale = Vector2( 92.5488, 35.8765 )
collision_layer = 32
collision_mask = 19

[node name="Sprite" type="Sprite" parent="zeroG"]
position = Vector2( 0.026123, -0.130956 )
scale = Vector2( 0.314796, 0.311878 )
texture = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="zeroG"]
modulate = Color( 0.290196, 0.290196, 0.290196, 1 )
shape = SubResource( 5 )

[node name="ENDR" type="Position2D" parent="."]
position = Vector2( 12973, 171 )

[node name="lv6pathnode" parent="." instance=ExtResource( 8 )]

[connection signal="body_entered" from="zeroG" to="." method="_on_zeroG_body_entered"]
[connection signal="body_exited" from="zeroG" to="." method="_on_zeroG_body_exited"]
